Conclui os requisitos R1 e R2 da Sprint 1 e ajustei a infraestrutura de login e roles.

--- a/src/main/resources/message_pt.properties
+++ b/src/main/resources/message_pt.properties
@@ -8,10 +8,24 @@ user.name =  Nome
 user.role = Tipo
 actions.link = Ações
 confirm.link = Você tem certeza que quer deletar esse item?
+exit.link = Sair
+save.link = Salvar
+welcome.message = Bem-vindo
 
-users.welcome = Administração Usuários
-users.entity = Usuários
 users.create = Criar Usuário
 users.list = LIsta de Usuários
 users.update = Atualizar
 users.delete =  Apagar
+return.to.home=Retornar para a Página Inicial
+
+# Mensagens para admin/index.jsp
+admin.dashboard.title=Painel Administrativo
+admin.dashboard.heading=Página do Administrador
+admin.menu.heading=Menu Administrativo
+
+# Para home.jsp
+home.page.title=Página Inicial
+home.page.heading=Bem-vindo ao Sistema!
+home.page.content=Explore nosso sistema. Faça login para acessar funcionalidades exclusivas.
+public.info.link1=Informações Gerais
+public.info.link2=Contato
