--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -2,16 +2,30 @@
 page.title=Login
 page.label=Welcome to the system
 user.login=Email
-user.password=Password
+user.password= Password
 user.ID = ID
 user.name =  Name
 user.role = Role
 actions.link = Actions
 confirm.link = Are you sure you want to delete this item?
+exit.link = Logout
+save.link = Save
+welcome.message = Welcome
 
-users.welcome = Users Management
-users.entity = Users
 users.create = Create User
 users.list = Users List
 users.update = Update
 users.delete =  Delete
+return.to.home=Return to Home Page
+
+# Messages for admin/index.jsp
+admin.dashboard.title=Admin Dashboard
+admin.dashboard.heading=Administrator Page
+admin.menu.heading=Admin Menu
+
+# For home.jsp
+home.page.title=Home Page
+home.page.heading=Welcome to the System!
+home.page.content=Explore our system. Log in to access exclusive features.
+public.info.link1=General Information
+public.info.link2=Contact
