Fixado bug com sessoes de teste

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -90,7 +90,6 @@ session.action.start=Start Session
 session.action.finish=Finish Session
 session.action.cancel=Cancel Session
 
-# Other general keys if not present
 actions.cancel=Cancel
 
 # Tester Dashboard
@@ -100,3 +99,7 @@ tester.projects.assigned=Your Assigned Projects
 tester.no.projects.assigned=You are not currently assigned to any projects.
 tester.my.sessions=My Test Sessions
 tester.no.sessions.active=You have no active or recent test sessions.
+
+sessions.list.for.project.title=Sessions List in Project
+session.status=Session Status
+sessions.view.for.project=View session details
