--- a/src/main/resources/message_pt.properties
+++ b/src/main/resources/message_pt.properties
@@ -65,6 +65,8 @@ return.to.strategies.list=Retornar para a Lista de Estratégias
 sessions.create=Criar Sessão de Teste
 sessions.create.for.project=Nova Sessão de Teste para o Projeto
 sessions.list=Lista de Sessões de Teste
+sessions.list.for.project.title=Lista de Sessões de Teste no Projeto
+sessions.view.for.project=Ver detalhes da sessão
 sessions.list.for.project=Sessões de Teste do Projeto
 session.title=Título
 session.description=Descrição
