--- a/src/main/resources/message_pt.properties
+++ b/src/main/resources/message_pt.properties
@@ -6,28 +6,28 @@ user.password=Senha
 user.ID = ID
 user.name =  Nome
 user.role = Tipo
-actions.link = Ações
-confirm.link = Você tem certeza que quer deletar esse item?
+actions.link = AÃ§Ãµes
+confirm.link = VocÃª tem certeza que quer deletar esse item?
 exit.link = Sair
 save.link = Salvar
 welcome.message = Bem-vindo
 
-users.create = Criar Usuário
-users.list = LIsta de Usuários
+users.create = Criar UsuÃ¡rio
+users.list = LIsta de UsuÃ¡rios
 users.update = Atualizar
 users.delete =  Apagar
-return.to.home=Retornar para a Página Inicial
+return.to.home=Retornar para a PÃ¡gina Inicial
 
 # Mensagens para admin/index.jsp
 admin.dashboard.title=Painel Administrativo
-admin.dashboard.heading=Página do Administrador
+admin.dashboard.heading=PÃ¡gina do Administrador
 admin.menu.heading=Menu Administrativo
 
 # Para home.jsp
-home.page.title=Página Inicial
-home.page.heading=Bem-vindo ao Sistema de Testes!
-home.page.content=Explore nosso sistema
-public.info.link1=Informações Gerais
+home.page.title=PÃ¡gina Inicial
+home.page.heading=G-Tes - Gerenciador de Testes para Jogos Digitais
+home.page.content=Este site tem como objetivo ajudar testadores de jogos digitais a organizar seus testes exploratÃ³rios, permitindo a criaÃ§Ã£o e o gerenciamento de projetos, estratÃ©gias e sessÃµes de teste.
+public.info.link1=Para ver as estratÃ©gias criadas, clique no link abaixo:
 
 # Projetos
 projects.create=Criar Projeto
@@ -35,43 +35,43 @@ projects.list=Lista de Projetos
 projects.update=Atualizar Projeto
 projects.delete=Apagar Projeto
 project.name=Nome do Projeto
-project.description=Descrição
+project.description=DescriÃ§Ã£o
 project.created.at=Criado Em
-project.assign.users=Atribuir Usuários
-project.assign.users.hint=Pressione Ctrl/Cmd para selecionar múltiplos usuários.
-project.assigned.users=Usuários Atribuídos
-project.no.assigned.users=Nenhum usuário atribuído
+project.assign.users=Atribuir UsuÃ¡rios
+project.assign.users.hint=Pressione Ctrl/Cmd para selecionar mÃºltiplos usuÃ¡rios.
+project.assigned.users=UsuÃ¡rios AtribuÃ­dos
+project.no.assigned.users=Nenhum usuÃ¡rio atribuÃ­do
 projects.no.projects.found=Nenhum projeto encontrado.
 
-# Estratégias
-strategies.create=Criar Estratégia
-strategies.list=Lista de Estratégias
-strategies.update=Atualizar Estratégia
-strategies.delete=Apagar Estratégia
-strategy.name=Nome da Estratégia
-strategy.description=Descrição
+# EstratÃ©gias
+strategies.create=Criar EstratÃ©gia
+strategies.list=Lista de EstratÃ©gias
+strategies.update=Atualizar EstratÃ©gia
+strategies.delete=Apagar EstratÃ©gia
+strategy.name=Nome da EstratÃ©gia
+strategy.description=DescriÃ§Ã£o
 strategy.tips=Dicas
 strategy.images=Imagens
 strategy.image.url=URL da Imagem
-strategy.image.description=Descrição da Imagem
+strategy.image.description=DescriÃ§Ã£o da Imagem
 strategy.image.description.placeholder=Ex: Captura de tela do bug
 strategy.add.image=Adicionar Outra Imagem
 strategy.details=Detalhes
-strategies.no.strategies.found=Nenhuma estratégia encontrada.
-strategy.not.found=Estratégia não encontrada.
-return.to.strategies.list=Retornar para a Lista de Estratégias
+strategies.no.strategies.found=Nenhuma estratÃ©gia encontrada.
+strategy.not.found=EstratÃ©gia nÃ£o encontrada.
+return.to.strategies.list=Retornar para a Lista de EstratÃ©gias
 
-# Sessões
-sessions.create=Criar Sessão de Teste
-sessions.create.for.project=Nova Sessão de Teste para o Projeto
-sessions.list=Lista de Sessões de Teste
-sessions.list.for.project.title=Lista de Sessões de Teste no Projeto
-sessions.view.for.project=Ver detalhes da sessão
-sessions.list.for.project=Sessões de Teste do Projeto
-session.title=Título
-session.description=Descrição
-session.strategy=Estratégia
-session.select.strategy=-- Selecione uma Estratégia --
+# SessÃµes
+sessions.create=Criar SessÃ£o de Teste
+sessions.create.for.project=Nova SessÃ£o de Teste para o Projeto
+sessions.list=Lista de SessÃµes de Teste
+sessions.list.for.project.title=Lista de SessÃµes de Teste no Projeto
+sessions.view.for.project=Ver detalhes da sessÃ£o
+sessions.list.for.project=SessÃµes de Teste do Projeto
+session.title=TÃ­tulo
+session.description=DescriÃ§Ã£o
+session.strategy=EstratÃ©gia
+session.select.strategy=-- Selecione uma EstratÃ©gia --
 session.tester=Testador
 session.status=Status
 session.status.CRIADA=Criada
@@ -81,25 +81,25 @@ session.status.CANCELADA=Cancelada
 session.created.at=Criada Em
 session.started.at=Iniciada Em
 session.finished.at=Finalizada Em
-sessions.no.sessions.found=Nenhuma sessão de teste encontrada para este projeto.
-session.not.found=Sessão de teste não encontrada.
-sessions.create.button=Criar Sessão
-session.details=Detalhes da Sessão
-return.to.sessions.list.for.project=Retornar para Sessões do Projeto
+sessions.no.sessions.found=Nenhuma sessÃ£o de teste encontrada para este projeto.
+session.not.found=SessÃ£o de teste nÃ£o encontrada.
+sessions.create.button=Criar SessÃ£o
+session.details=Detalhes da SessÃ£o
+return.to.sessions.list.for.project=Retornar para SessÃµes do Projeto
 return.to.projects.list=Retornar para Lista de Projetos
 
-# Ações da Sessão (R8)
-session.action.start=Iniciar Sessão
-session.action.finish=Finalizar Sessão
-session.action.cancel=Cancelar Sessão
+# AÃ§Ãµes da SessÃ£o (R8)
+session.action.start=Iniciar SessÃ£o
+session.action.finish=Finalizar SessÃ£o
+session.action.cancel=Cancelar SessÃ£o
 
-# Outras chaves gerais se não presentes
+# Outras chaves gerais se nÃ£o presentes
 actions.cancel=Cancelar
 
 # Painel do Testador
 tester.dashboard.title=Painel do Testador
 tester.dashboard.heading=Bem-vindo, Testador!
-tester.projects.assigned=Seus Projetos Atribuídos
-tester.no.projects.assigned=Você não está atualmente atribuído a nenhum projeto.
-tester.my.sessions=Minhas Sessões de Teste
-tester.no.sessions.active=Você não possui sessões de teste ativas ou recentes.
+tester.projects.assigned=Seus Projetos AtribuÃ­dos
+tester.no.projects.assigned=VocÃª nÃ£o estÃ¡ atualmente atribuÃ­do a nenhum projeto.
+tester.my.sessions=Minhas SessÃµes de Teste
+tester.no.sessions.active=VocÃª nÃ£o possui sessÃµes de teste ativas ou recentes.
