--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -25,9 +25,9 @@ admin.menu.heading=Admin Menu
 
 # For home.jsp
 home.page.title=Home Page
-home.page.heading=Welcome to the Testing System!
-home.page.content=Explore our system. Log in.
-public.info.link1=General Information
+home.page.heading=G-Tes - Digital Game Test Manager
+home.page.content=This site aims to help digital game testers organize their exploratory tests, allowing the creation and management of projects, strategies and test sessions.
+public.info.link1=To see the strategies created, click on the link below:
 
 projects.create=Create Project
 projects.list=Projects List
