Alteracoes em design

--- a/src/main/resources/message_en.properties
+++ b/src/main/resources/message_en.properties
@@ -53,7 +53,7 @@ strategy.tips=Tips
 strategy.images=Images
 strategy.image.url=Image URL
 strategy.image.description=Image Description
-strategy.image.description.placeholder=e.g., Screenshot of the bug
+strategy.image.description.placeholder=e.g., Screenshot of the strategy
 strategy.add.image=Add Another Image
 strategy.details=Details
 strategies.no.strategies.found=No strategies found.
@@ -102,4 +102,4 @@ tester.no.sessions.active=You have no active or recent test sessions.
 
 sessions.list.for.project.title=Sessions List in Project
 session.status=Session Status
-sessions.view.for.project=View session details
+sessions.view.for.project=View sessions in project
